Corrected errors validations, bundle css, fixed versions of npm packages, removed the horizontal scroll.

--- a/src/styles/blocks/articles/menu/__list/_save-news/menu__list_save-news.css
+++ b/src/styles/blocks/articles/menu/__list/_save-news/menu__list_save-news.css
@@ -20,3 +20,9 @@
     width: 44.4vw;
   }
 }
+
+@media screen and (max-width: 320px) {
+  .menu__list.menu__list_save-news {
+    display: none;
+  }
+}
